--- a/XLSC/XLSC_DeNghiCapVTTB.vm
+++ b/XLSC/XLSC_DeNghiCapVTTB.vm
@@ -4,14 +4,14 @@
     <style type="text/css">
         body {
             font-family: "Times New Roman";
-            font-size: 13pt;
+            font-size: 9pt;
             page-break-inside: avoid; 
             page-break-after: auto;
         }
 
         table {
             font-family: "Times New Roman";
-            font-size: 13pt;
+            font-size: 9pt;
             line-height: 1.3;
             width: 100%;
         }
@@ -22,18 +22,18 @@
 
         table th {
             font-family: "Times New Roman";
-            font-size: 13pt;
+            font-size: 9pt;
             text-align: center;
         }
 
         table th,
         table td {
             vertical-align: top;
-            font-size: 13pt;
+            font-size: 9pt;
         }
 
         .tableContent {
-            font-size: 13pt;
+            font-size: 9pt;
             width: 100%;
             border-collapse: collapse;
             border: 0.25pt solid gray;
@@ -89,7 +89,7 @@
             position: relative;
             vertical-align: baseline;
             top: -0.5em;
-            font-size: 13pt;
+            font-size: 9pt;
         }
 
         .indent {
@@ -416,17 +416,17 @@
         <table colspan="0" rowspan="0" class="tableHeader"
             style="margin-top: 10pt; margin-left: 0pt; margin-right: 5pt;">
             <tr>
-                <th width="40%" style="text-align: center; font-size:11pt">
+                <th width="40%" style="text-align: center; font-size:10pt">
                     <span style="font-weight: normal;">TỔNG CÔNG TY</span>
                     <br />
                     <span style="font-weight: normal;">ĐIỆN LỰC TP HÀ NỘI </span>
                     <br />
-                    <b>$DonViDeNghi</b>
+                    <b>$DonViDeNghi.toUpperCase()</b>
                     <br />
                     <b><span style="line-height: 3pt">_______________</span></b>
                     <br />
                 </th>
-                <th width="60%" style="text-align: center; font-size:11pt">
+                <th width="60%" style="text-align: center; font-size:10pt">
                     <span style="text-align: center;">
                         <b>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</b>
                         <br />
@@ -435,7 +435,7 @@
                         <b><span style="line-height: 3pt">________________________</span></b>
                         <br />
                     </span>
-                    <div style="font-size:11pt; text-align: right;">
+                    <div style="font-size:10pt; text-align: right;">
                         <br />
                         <i>Hà Nội, ngày $NgayToTrinh.split(" ")[0].split("/")[0] tháng $NgayToTrinh.split("
                             ")[0].split(
@@ -450,143 +450,158 @@
         <div>
             <table class="tableHeader">
                 <tr>
-                    <td style="text-align: center; font-size:13pt; font-weight: bold;">
+                    <td style="text-align: center; font-size:10pt; font-weight: bold;">
                         <b>ĐỀ NGHỊ CẤP VẬT TƯ THIẾT BỊ</b>
                     </td>
                 </tr>
                 <tr>
-                    <td style="font-size:13pt; font-weight: normal;"> 
+                    <td style="font-size:10pt; font-weight: normal;"> 
                         <div style="margin-left: 300px;">Tại kho: $TaiKho</div>
                     </td>
                 </tr>
                 <tr>
-                    <td style="font-size:13pt; font-weight: normal;">
+                    <td style="font-size:10pt; font-weight: normal;">
                         <div style="margin-left: 300px;">Kính gửi: $KinhGui</div>
                     </td>
                 </tr>
             </table>
-            <div style="padding-top: 15pt;">
-                <div>Tên đơn vị đề nghị: $DonViDeNghi</div>
-                <div>Lý do cấp: 
+            <div style="padding-top: 15pt; font-size:10pt;">
+                <div style="padding-bottom: 4pt;">Tên đơn vị đề nghị: $DonViDeNghi</div>
+                <div style="padding-bottom: 4pt;">Lý do cấp: 
                     $LyDoCap
                 </div>
-                <div>Đề nghị cấp danh sách vật tư thiết bị như sau:</div>
+                <div style="padding-bottom: 4pt;">Đề nghị cấp danh sách vật tư thiết bị như sau:</div>
             </div>
         </div>
         <div>
             <table class="tableHeaderxx">
                 <tr class="PaddingCellTable">
-                    <th  style="text-align: center; font-weight: bold;">
+                    <th  style="text-align: center; font-weight: bold; font-size: 9pt;">
                         STT
                     </th>
-                    <th style="text-align: center; font-weight: bold;">
+                    <th style="text-align: center; font-weight: bold; font-size: 9pt;">
                         MÃ VẬT TƯ
                     </th>
-                    <th  style="text-align: center; font-weight: bold;">
+                    <th  style="text-align: center; font-weight: bold; font-size: 9pt;">
                         TÊN VẬT TƯ VÀ QUY CÁCH
                     </th>
-                    <th  style="text-align: center; font-weight: bold;">
+                    <th  style="text-align: center; font-weight: bold; font-size: 9pt;">
                         ĐƠN VỊ TÍNH
                     </th>
-                    <th  style="text-align: center; font-weight: bold;">
+                    <th  style="text-align: center; font-weight: bold; font-size: 9pt;">
                         SỐ LƯỢNG
                     </th>
-                    <th  style="text-align: center; font-weight: bold;">
+                    <th  style="text-align: center; font-weight: bold; font-size: 9pt;">
                         GHI CHÚ
                     </th>
                 </tr>
                 #set($index = 1)
                 #foreach($row in $outputArray)
                 <tr class="PaddingCellTable">
-                    <td style="text-align: center; font-size: 10.5pt;">
+                    <td style="text-align: center; font-size: 9pt;">
                         $index
                     </td>
-                    <td style="text-align: left; font-size: 10.5pt;">
+                    <td style="text-align: left; font-size: 9pt;">
                         $row.get("MaVatTu")
                     </td>
-                    <td style="text-align: left; font-size: 10.5pt;">
+                    <td style="text-align: left; font-size: 9pt;">
                         $row.get("TenVatTuVaQuyCach")
                     </td>
-                    <td style="text-align: left; font-size: 10.5pt;">
+                    <td style="text-align: left; font-size: 9pt;">
                         $row.get("DonViTinh")
                     </td>
-                    <td style="text-align: right; font-size: 10.5pt;">
+                    <td style="text-align: right; font-size: 9pt;">
                         #formatStringFinance($row.get("SoLuong"))
                     </td>
-                    <td style="text-align: left; font-size: 10.5pt;">
+                    <td style="text-align: left; font-size: 9pt;">
                         $row.get("GhiChu")
                     </td>
                 </tr>
                 #set($index = $index + 1)
+                #end
+
+                #set($remainingRows = 10 - $outputArray.size())
+                #if($remainingRows > 0)
+                    #foreach($i in [1..$remainingRows])
+                    <tr class="PaddingCellTable">
+                        <td style="text-align: center; font-size: 9pt;">$index</td>
+                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
+                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
+                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
+                        <td style="text-align: right; font-size: 9pt;">&nbsp;</td>
+                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
+                    </tr>
+                     #set($index = $index + 1)
+                    #end
                 #end
             </table>
             <table colspan="0" rowspan="0" class="tableHeader" style="margin-top: 20pt;">
                 <tr>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_DoiTruong</p>
-                        <b>ĐỘI TRƯỞNG</b>
-                        <b style="color: white;">EMPTY</b>
+                        <b style="font-size:10pt;">ĐỘI TRƯỞNG</b>
+                        <div style="color: white;">EMPTY</div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_DoiTruong</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_DoiTruong</p>
                     </th>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_ChuyenVienKT</p>
-                        <b>CHUYÊN VIÊN KT</b>
-                        <b style="color: white;">EMPTY</b>
+                        <b style="font-size:10pt;">CHUYÊN VIÊN KT</b>
+                        <div style="color: white;">EMPTY</div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_ChuyenVienKT</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_ChuyenVienKT</p>
                     </th>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_TPPKT</p>
-                        <b>TRƯỞNG/PHÓ PHÒNG KT</b>
+                        <b style="font-size:10pt;">TRƯỞNG/PHÓ PHÒNG KT</b>
                         
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_TPPKT</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_TPPKT</p>
                     </th>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_ChuyenVienKHVT</p>
-                        <b>CHUYÊN VIÊN KHVT</b>
-                        <b style="color: white;">EMPTY</b>
+                        <b style="font-size:10pt;">CHUYÊN VIÊN KHVT</b>
+                        <div style="color: white;">EMPTY</div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_ChuyenVienKHVT</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_ChuyenVienKHVT</p>
                     </th>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_TPPKHVT</p>
-                        <b>TRƯỞNG/PHÓ PHÒNG KHVT</b>
+                        <b style="font-size:10pt;">TRƯỞNG/PHÓ PHÒNG KHVT</b>
                         
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_TPPKHVT</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_TPPKHVT</p>
                     </th>
                     <th style="text-align: center">
                         <p style="font-size:2pt; color: white">$ChuKy_GiamDoc</p>
-                        <b>GIÁM ĐỐC</b>
-                        <b style="color: white;">EMPTY</b>
+                        <b style="font-size:10pt;">GIÁM ĐỐC</b>
+                        <div style="color: white;">EMPTY</div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <br />
-                        <p style="font-size:12pt; margin-top: 30px;">$Name_GiamDoc</p>
+                        <p style="font-size:10pt; margin-top: 30px;">$Name_GiamDoc</p>
                     </th>
                 </tr>
             </table>
