update cấp vốn VTTB cho DTXD_SCL

--- a/Cấp vốn VTTB cho DTXD_SCL UAT/DeNghiCapVonSCL_DTXD.vm
+++ b/Cấp vốn VTTB cho DTXD_SCL UAT/DeNghiCapVonSCL_DTXD.vm
@@ -164,7 +164,7 @@
                     <b style="border-bottom: 1px solid black;">$DonViDeNghi</b>
                     <br />
                     <div style="font-size:11pt; font-weight: normal;">
-                        Số:$SoCongVan/Ttr-Đơn vị soạn thảo<br />
+                        Số:$SoCongVan<br />
                     </div>
                 </th>
                 <th width="60%" style="text-align: center; font-size:11pt">
